--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.11"
 dependencies = [
     "typer>=0.12",
     "rich>=13.7",
+    "textual>=0.41.0",
 ]
 
 [project.scripts]
